...
                            .verticalScroll(rememberScrollState()),
                    ) {
                        // Back Arrow
                        IconButton(onClick = onBackClick) {
                            Icon(
                                imageVector = Icons.Default.ArrowBack,
                                contentDescription = "Back",
                                tint = Color.Black
                            )
                        }

                        Spacer(Modifier.height(155.dp))

                        Text(
                            text = "Create An Account",
                            style = MaterialTheme.typography.headlineLarge,
                            modifier = Modifier.padding(horizontal = 16.dp).padding(bottom = 8.dp)
                        )

                        Row(
                            modifier = Modifier.padding(horizontal = 16.dp),
...
                            Text(
                                text = "Already have an account?",
                                style = MaterialTheme.typography.bodyLarge
                            )
                            Spacer(Modifier.width(10.dp))
                            Text(
                                text = "Sign In",
                                color = Color(0xFF10DAE9),
                                style = MaterialTheme.typography.bodyLarge,
                                modifier = Modifier.clickable { onSignInClick() }
                            )
                        }

                        Spacer(Modifier.height(20.dp))

                        OutlinedTextField(
                            value = name,
                            onValueChange = { name = it },
                            label = { Text("Name") },
                            leadingIcon = {
                                Icon(
                                    imageVector = Icons.Default.Person,
                                    contentDescription = "Person Icon",
                                    modifier = Modifier.size(24.dp)
                                )
...

                        Spacer(Modifier.height(10.dp))

                        OutlinedTextField(
                            value = phone,
                            onValueChange = { phone = it },
                            label = { Text("Phone") },
                            leadingIcon = {
                                Icon(
                                    imageVector = Icons.Default.Phone,
                                    contentDescription = "Phone Icon",
                                    modifier = Modifier.size(24.dp)
                                )
...

                        Spacer(Modifier.height(10.dp))

                        OutlinedTextField(
                            value = email,
                            onValueChange = { email = it },
                            label = { Text("Email") },
                            leadingIcon = {
                                Icon(
                                    imageVector = Icons.Default.Mail,
                                    contentDescription = "Email Icon",
                                    modifier = Modifier.size(24.dp)
                                )
...

                        Spacer(Modifier.height(10.dp))

                        OutlinedTextField(
                            value = password,
                            onValueChange = { password = it },
                            label = { Text("Password") },
                            visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
                            leadingIcon = {
                                Icon(
                                    imageVector = Icons.Default.Lock,
                                    contentDescription = "Password Icon",
                                    modifier = Modifier.size(24.dp)
...

                        Spacer(Modifier.height(10.dp))

                        OutlinedTextField(
                            value = confPass,
                            onValueChange = { confPass = it },
                            label = { Text("Confirm Password") },
                            visualTransformation = if (confPassVisible) VisualTransformation.None else PasswordVisualTransformation(),
                            leadingIcon = {
                                Icon(
                                    imageVector = Icons.Default.Lock,
                                    contentDescription = "Confirm Password Icon",
                                    modifier = Modifier.size(24.dp)
...
                                    imageVector = Icons.Default.PersonPin,
                                    contentDescription = "Sign Up Icon",
                                    modifier = Modifier.size(ButtonDefaults.IconSize)
                                )
                                Spacer(Modifier.width(8.dp))
                                Text(
                                    text = "Sign Up",
                                    style = MaterialTheme.typography.titleMedium
                                )
                            }
                        }

                        Spacer(Modifier.height(10.dp))
...
